--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,12 @@ body, html {
   
 }
 
+.content-title{
+  color: #333;
+  font-weight: bolder;
+  font-size: 1rem;
+}
+
 /* Header Styles */
 .header {
   font-size: 2em;
@@ -70,7 +76,7 @@ body, html {
 .book-title {
   font-size: 1.2em;
   font-weight: bold;
-  color: #333;
+  color: #000000;
   margin-bottom: 10px;
 }
 
