--- a/client/src/index.css
+++ b/client/src/index.css
@@ -106,7 +106,80 @@ body, html {
 .rent-button:hover {
   background-color: #1e4d35;
 }
+.form-sewa-container {
+  background-color: #fff;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 500px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 30px;
+}
 
+.form-title {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.form-input {
+  margin-bottom: 1px;
+
+}
+
+.form-input label {
+  font-size: 1em;
+  color: #333;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.form-input input {
+  width: 100%;
+  padding: 10px;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.confirm-button{
+  margin: 20px;
+}
+.form-input div {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #2c6e49;
+}
+
+.form-button {
+  background-color: #2c6e49;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.1em;
+  cursor: pointer;
+  width: 100%;
+  transition: background-color 0.3s ease;
+}
+
+.form-button:hover {
+  background-color: #1e4d35;
+}
+
+.label-date{
+  margin:8px;
+}
+
+.total-rent {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #333;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  text-align: center;
+}
 @media (max-width: 500px) {
   .book-card {
       width: 160px;
@@ -124,4 +197,29 @@ body, html {
   .rent-button {
       padding: 8px;
   }
+  .app-container {
+    padding: 10px;
 }
+
+.header {
+    font-size: 2em;
+}
+
+.sub-header {
+    font-size: 1em;
+}
+
+.form-sewa-container {
+    width: 100%;
+    padding: 15px;
+}
+
+.form-input input {
+    font-size: 0.9em;
+}
+
+.form-button {
+    padding: 10px;
+}
+}
+
