--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,32 +9,26 @@ body, html {
   font-family: Arial, sans-serif;
 }
 
-/* Center the content of the page */
+/*  Content of the page */
 .app-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 100vh; /* Full viewport height */
-  background-color: #ffffff; /* Light background color */
+  height: 100vh; 
+  background-color: #ffffff; 
 }
 
 .content {
   display: flex;
-  text-align: center; /* Center text within the content */
+  text-align: center; 
   padding: 20px;
   background-color: #c6cdc9;
   border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Card-like shadow */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   margin: 20px ;
   flex-wrap: wrap;
   
-}
-
-.content-title{
-  color: #333;
-  font-weight: bolder;
-  font-size: 1rem;
 }
 
 /* Header Styles */
@@ -53,7 +47,7 @@ body, html {
 }
 
 
-/* BukuCard.css */
+/* BukuCard*/
 .book-card {
   background-color: #f9f9f9;
   border-radius: 8px;
@@ -92,6 +86,13 @@ body, html {
   margin-bottom: 20px;
 }
 
+.rent-form{
+  background-color: #b2c5ba;
+  margin-bottom:10px;
+  border-radius: 8px;
+  padding:5px;
+}
+
 .rent-button {
   background-color: #2c6e49;
   color: white;
@@ -103,71 +104,16 @@ body, html {
   transition: background-color 0.3s ease;
 }
 
-.rent-button:hover {
-  background-color: #1e4d35;
-}
-.form-sewa-container {
-  background-color: #fff;
-  border-radius: 8px;
-  width: 100%;
-  max-width: 500px;
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 30px;
-}
-
-.form-title {
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-bottom: 20px;
-  color: #333;
-}
-
-.form-input {
-  margin-bottom: 1px;
-
-}
-
-.form-input label {
-  font-size: 1em;
-  color: #333;
-  display: block;
-  margin-bottom: 5px;
-}
-
-.form-input input {
-  width: 100%;
-  padding: 10px;
-  font-size: 1em;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
 .confirm-button{
-  margin: 20px;
-}
-.form-input div {
-  font-size: 1.2em;
-  font-weight: bold;
-  color: #2c6e49;
-}
-
-.form-button {
-  background-color: #2c6e49;
+  background-color: #5964ae;
   color: white;
-  padding: 12px 20px;
-  border: none;
+  padding: 10px;
   border-radius: 5px;
-  font-size: 1.1em;
   cursor: pointer;
-  width: 100%;
+  font-size: 1em;
   transition: background-color 0.3s ease;
+  margin-bottom: 1rem;
 }
-
-.form-button:hover {
-  background-color: #1e4d35;
-}
-
 .label-date{
   margin:8px;
 }
@@ -180,6 +126,7 @@ body, html {
   margin-bottom: 10px;
   text-align: center;
 }
+
 @media (max-width: 500px) {
   .book-card {
       width: 160px;
@@ -199,27 +146,22 @@ body, html {
   }
   .app-container {
     padding: 10px;
-}
-
-.header {
+  }
+  .header {
     font-size: 2em;
-}
-
-.sub-header {
+  }
+  .sub-header {
     font-size: 1em;
-}
-
-.form-sewa-container {
+  }
+  .form-sewa-container {
     width: 100%;
     padding: 15px;
-}
-
-.form-input input {
+  }
+  .form-input input {
     font-size: 0.9em;
-}
-
-.form-button {
+  }
+  .form-button {
     padding: 10px;
-}
+  }
 }
 
